# angband

./: .clangd  COPYING.ja
.github/workflows/: clang-tidy  clang-tidy.yaml  translation-progress.yaml  wip-i18n-progress.yaml
i18n/: .gitignore  Makefile  README.md  _gamedata-artifact.pot  _gamedata-blow_effects.pot  _gamedata-blow_methods.pot  _gamedata-body.pot  _gamedata-brand.pot  _gamedata-class.pot  _gamedata-ego_item.pot  _gamedata-list-equip-slots.pot  _gamedata-list-mon-message.pot  _gamedata-list-mon-race-flags.pot  _gamedata-monster.pot  _gamedata-object.pot  _gamedata-object_base.pot  _gamedata-p_race.pot  _gamedata-pain.pot  _gamedata-player_property.pot  _gamedata-player_timed.pot  _gamedata-source.pot  _gamedata-terrain.pot  _gamedata-trap.pot  _gamedata-ui_entry.pot  gamedata.pot  ja.po  list.pot  messages.pot
i18n/ja_JP/: .gitignore  Makefile  hengband.in.po  hengband.messages.po
lib/gamedata-ja/: class.txt  p_race.txt
scripts/: version.sh
src/: Makefile.bcc  Makefile.inc  Makefile.osx  Makefile.src  angband.h  angband.rc  autopick.c  birth.c  buildid.c  cave-square.c  cave.c  cmd-cave.c  cmd-obj.c  cmd-pickup.c  cmd-spoil.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd5.c  cmd6.c  config.h  defines.h  dungeon.c  externs.h  files.c  generate.c  h-basic.h  i18n.c  i18n.h  init.c  init.h  init1.c  init2.c  japanese.c  japanese.h  l-misc.c  l-monst.c  l-object.c  l-player.c  (+73 more)
src/lua/: array.lua  basic.lua  class.lua  code.lua  container.lua  (+67 more)
utils/: applyhengtrans  applytrans  gamedata2pot  translationprogress
utils/i18nhound/: CMakeLists.txt  main.cpp
(+58 files in other folders)
